- [2026-02-20 14:27] FEAT: 集成 WxPusher 通知系统，支持笔记发布成功/失败通知 (Files: pyproject.toml, .env.example, src/xhs_agent/config.py, src/xhs_agent/services/notification_service.py, src/xhs_agent/services/goal_service.py)
- [2026-02-20 14:04] CHORE: 更新 .gitignore，忽略数据库文件、macOS 文件和环境配置文件 (Files: .gitignore)
- [2026-02-20 14:04] FEAT: XhsHttpClient 补全 API 接口：搜索笔记、笔记详情、评论、子评论、短链接、首页推荐 (Files: src/xhs_agent/services/xhs_http.py)
- [2026-02-20 14:04] FEAT: 优化图片提示词规则为"手机误拍感快照"风格，约100字详细描述 (Files: src/xhs_agent/services/text_service.py)
- [2026-02-20 14:04] CHORE: 添加 tenacity 依赖，清理旧 js/ 目录文件 (Files: pyproject.toml, uv.lock, js/)
- [2026-02-20 13:53] FIX: 修复 update_goal SQL 事务一致性问题，检查第一个 UPDATE 是否成功后再执行第二个 UPDATE (Files: src/xhs_agent/services/goal_service.py)
- [2026-02-20 13:53] FIX: 修复图片生成数量不足时的补齐逻辑，改为记录警告并返回实际数量，避免返回重复图片 (Files: src/xhs_agent/services/image_service.py)
- [2026-02-20 13:53] FEAT: 为图片生成添加宽高比无效值的警告日志 (Files: src/xhs_agent/services/image_service.py)
- [2026-02-20 13:53] REFACTOR: 重构模块导入方式，将本地 xhs/ 目录重命名为 xhs_tools/，移除 sys.path hack 代码 (Files: src/xhs_agent/services/upload_service.py, xhs/ -> xhs_tools/)
- [2026-02-20 15:00] FIX: 更新即梦4尺寸映射为官方2K规格，移除不支持的4:5比例 (Files: src/xhs_agent/services/image_service.py)
- [2026-02-20 14:45] FEAT: 更新即梦4尺寸映射为高清规格，提示词改为全中文约100字详细描述 (Files: src/xhs_agent/services/image_service.py, src/xhs_agent/services/text_service.py)
- [2026-02-20 14:30] FEAT: 图片提示词全部改为中文，严禁英文单词/字母/拼音，避免生成图片中出现英文 (Files: src/xhs_agent/services/text_service.py)
- [2026-02-20 14:15] FIX: 即梦4 n 参数类型改为整数，修复 500 类型错误 (Files: src/xhs_agent/services/image_service.py)
- [2026-02-20 14:00] FIX: 即梦4多图生成时在提示词中注入张数说明，避免只返回1张 (Files: src/xhs_agent/services/image_service.py)
- [2026-02-20 13:45] FEAT: 切换为即梦4 API，用 n 参数一次请求生成多张图片，移除并发单张请求 (Files: src/xhs_agent/services/image_service.py)
- [2026-02-20 13:30] FEAT: 图片生成模型切换为 doubao-seedream-4-5-251128，aspect_ratio 映射为 size 参数，去除水印 (Files: src/xhs_agent/services/image_service.py, .env)