@@ -73,9 +73,12 @@ def _make_client(cookie: str) -> XhsClient:
             "referer": "https://www.xiaohongshu.com/",
         }
     )
-    # 迁移 cookies
+    # 迁移 cookies，确保对所有小红书子域名都有效
     for c in client.session.cookies:
-        curl_session.cookies.set(c.name, c.value, domain=c.domain, path=c.path)
+        domain = c.domain if c.domain else ".xiaohongshu.com"
+        if not domain.startswith("."):
+            domain = "." + domain.lstrip(".")
+        curl_session.cookies.set(c.name, c.value, domain=domain, path=c.path or "/")
     # 替换内部 session（name mangling: __session -> _XiaoHongShuClient__session）
     client._XiaoHongShuClient__session = curl_session
     return client
@@ -133,7 +136,8 @@ def fetch_user_info(cookie: str) -> dict:
     """获取账号基本信息：昵称、头像、粉丝数、user_id"""
     client = _make_http_client(cookie)
     data = client.get_self_info()
-    # get_self_info 返回 data 层内容
+    # selfinfo 返回结构: {"basic_info": {...}, "interactions": [...]}
+    # basic_info 中只有 red_id，没有 user_id，需要用 v2 接口获取
     basic = data.get("basic_info") or data
     interact_list = data.get("interactions") or []
     fans = ""
@@ -141,8 +145,15 @@ def fetch_user_info(cookie: str) -> dict:
         if item.get("type") == "fans":
             fans = item.get("count", "")
             break
+    user_id = basic.get("user_id") or ""
+    if not user_id:
+        try:
+            info_v2 = client.get_self_info_v2()
+            user_id = info_v2.get("user_id") or ""
+        except Exception:
+            pass
     return {
-        "xhs_user_id": basic.get("user_id") or data.get("red_id") or "",
+        "xhs_user_id": user_id or basic.get("red_id") or "",
         "nickname": basic.get("nickname") or "",
         "avatar_url": basic.get("imageb") or basic.get("images") or "",
         "fans": fans,
@@ -150,12 +161,22 @@ def fetch_user_info(cookie: str) -> dict:
 
 
 def get_notes_statistics(cookie: str, time: int = 30) -> list:
-    """获取账号近期笔记统计数据（近 time 天）"""
-    client = _make_client(cookie)
+    """
+    获取账号近期笔记统计数据（近 time 天）
+
+    注意：此功能使用创作者中心 API，需要特殊的签名和域名配置。
+    如果遇到"登录已过期"错误，说明 Cookie 对创作者中心域名无效，
+    这是正常现象，不影响其他功能。
+    """
     try:
+        client = _make_client(cookie)
         return client.get_notes_statistics(time=time)
     except Exception as e:
-        logger.warning(f"get_notes_statistics 失败: {e}")
+        error_msg = str(e)
+        if "登录已过期" in error_msg or "code': -1" in error_msg:
+            logger.info(f"创作者中心 API 访问受限（Cookie 域名问题），跳过统计数据获取")
+        else:
+            logger.warning(f"get_notes_statistics 失败: {error_msg[:200]}")
         return []
 
 
@@ -163,11 +184,24 @@ def get_user_recent_notes(cookie: str, user_id: str = "", limit: int = 20) -> li
     """获取账号最近发布的笔记列表（含互动数据），使用 httpx 直接请求"""
     client = _make_http_client(cookie)
     if not user_id:
-        info = client.get_self_info()
-        basic = info.get("basic_info") or info
-        user_id = basic.get("user_id") or ""
+        try:
+            info = client.get_self_info_v2()
+            logger.info(f"get_self_info_v2 返回数据: {info}")
+            user_id = (
+                info.get("user_id") or info.get("basic_info", {}).get("user_id") or ""
+            )
+            if not user_id:
+                info_v1 = client.get_self_info()
+                logger.info(f"get_self_info_v1 返回数据: {info_v1}")
+                basic = info_v1.get("basic_info") or info_v1
+                user_id = basic.get("user_id") or ""
+        except Exception as e:
+            logger.warning(f"获取用户信息失败: {e}")
+            return []
     if not user_id:
-        logger.warning("get_user_recent_notes: 无法获取 user_id")
+        logger.warning(
+            "get_user_recent_notes: 无法获取 user_id，可能是 Cookie 无效或 API 返回数据格式变化"
+        )
         return []
     try:
         notes = client.get_user_all_notes(user_id)
